# loop-project_tracker

./: pyproject.toml
ai/: active_agent.txt  active_item.yaml  backlog.yaml  goal.yaml  next_agent.md  next_agent.yaml  requirements.md  review.md  simplification.md
ai/iterations/: ITER-0001.md
apps/project-tracker/: README.md  db.sqlite3  manage.py
apps/project-tracker/project_tracker/: asgi.py  settings.py
apps/project-tracker/static/tracker/: app.css  app.js
apps/project-tracker/templates/tracker/: base.html  dashboard.html  project_detail.html  project_list.html  tag_detail.html
apps/project-tracker/templates/tracker/partials/: dashboard_recent_projects_panel.html  dashboard_stats_panel.html  project_card.html  project_deleted_panel.html  project_detail_panel.html  project_edit_placeholder.html  project_form_panel.html  project_list_panel.html  project_mutation_response.html  tag_detail_panel.html  tag_edit_placeholder.html  tag_form_panel.html  tag_list_panel.html  task_create_placeholder.html  task_edit_placeholder.html  task_form_panel.html  task_list_panel.html  task_list_placeholder.html
apps/project-tracker/tracker/: admin.py  forms.py  models.py  urls.py  views.py
apps/project-tracker/tracker/migrations/: 0001_initial.py
apps/project-tracker/tracker/tests/: test_domain.py  test_views.py
context/repo/: architecture.md
