[tool.poetry]
name = "project-tracker"
version = "0.1.0"
description = "Personal project tracker web app using Django with SQLite"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
